Header too large fixed

--- a/style.css
+++ b/style.css
@@ -262,8 +262,8 @@ ul.ui.list li:before {
 
 .ui.inverted.black.footer {
 	margin-top: 40px;
-	padding: 4em 0em 5em;
 }
+
 .ui.inverted.black.footer a {
 	color: #FFF;
 }
